@@ -1,3 +1,8 @@
+2004-04-28  Stefan Jahn  <stefan@lkcc.org>
+
+	* matrix.cpp: Implemented all remaining matrix conversions not
+	limited	to two-port parameters (ytos, ztos, ytoz, ztoy).
+
 2004-04-26  Stefan Jahn  <stefan@lkcc.org>
 
 	* complex.cpp: Added remaining modulo '%' operators.
