@@ -1,3 +1,8 @@
+2004-04-28  Stefan Jahn  <stefan@lkcc.org>
+
+	* technical.tex (section{Matrix conversions}): Documented
+	matrix conversion algorithms.
+
 2004-02-18  Stefan Jahn  <stefan@lkcc.org>
 
 	* literature.bib: Added reference for natural constants.
